--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,21 +1,42 @@
-
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/JetBlue?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:8889/JetBlue?createDatabaseIfNotExist=true
     username: root
-    password:
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
-
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+        dialect: org.hibernate.dialect.MySQLDialect
+        format_sql: false
+        # Explicitly set foreign key constraints
+        hbm2ddl.auto: update
+        # Improve foreign key and constraint handling
+        check_nullability: true
+        # Allow circular dependencies in constraints
+        hbm2ddl.import_files_sql_extractor: org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
+    show-sql: false
+
   application:
-    name: JETBLUE-API-SERVICE
+    name: JetBlue-API-Service
 
-
+# Uncomment the following lines to enable SQL logging for Hibernate
 logging:
   level:
-    org.hibernate.SQL: DEBUG
+    org:
+      hibernate:
+        SQL: DEBUG
+      springframework:
+        http:
+          converter:
+            json: DEBUG
+    com:
+      fasterxml:
+        jackson: DEBUG
+
+
+
+#    logging.level.org.springframework.http.converter.json=DEBUG
+#    logging.level.com.fasterxml.jackson=DEBUG
