--- a/pom.xml
+++ b/pom.xml
@@ -31,11 +31,10 @@
         </developer>
     </developers>
 
-
-
     <properties>
         <java.version>17</java.version>
     </properties>
+
 
     <dependencies>
         <dependency>
@@ -97,10 +96,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+
     </dependencies>
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.1.2184</version>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
