Adding new auth algo

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -35,11 +35,5 @@ logging:
     com:
       fasterxml:
         jackson: DEBUG
-sonar:
-  projectKey: jetBlue
-  projectName: jetBlue
-  token: sqp_9556d3f9dbed22d021f940371892374d7200b425
-  login: admin
-  password: Ronaldo#$780
-  host:
-    url: http://localhost:9000
+server:
+  port: 8081
