implementing the user login

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,6 +32,7 @@ logging:
         http:
           converter:
             json: DEBUG
+        security: TRACE
     com:
       fasterxml:
         jackson: DEBUG
