--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,6 +4,10 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
 
   jpa:
     hibernate:
@@ -11,7 +15,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
-#        format_sql: true       # Set to true to format SQL nicely in logs
+        #        format_sql: true       # Set to true to format SQL nicely in logs
         hbm2ddl.auto: update
         check_nullability: true
         hbm2ddl.import_files_sql_extractor: org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
@@ -21,8 +25,8 @@ logging:
   level:
     org:
       hibernate:
-#        SQL: DEBUG             # Logs the SQL statements
-#        type: TRACE            # Logs SQL parameter binding values (optional, very verbose)
+      #        SQL: DEBUG             # Logs the SQL statements
+      #        type: TRACE            # Logs SQL parameter binding values (optional, very verbose)
       springframework:
         http:
           converter:
