--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,11 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.20.144</version>
+        </dependency>
     </dependencies>
 
     <build>
