--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,13 +1,15 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:8889/JetBlue?createDatabaseIfNotExist=true
-    username: root
-    password: root
+    url: ${DATABASE_URL}
+    username: ${DATABASE_USERNAME}
+    password: ${DATABASE_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
   servlet:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
+  config:
+    import: optional:file:.env[.properties]
 
   jpa:
     hibernate:
@@ -38,7 +40,16 @@ logging:
             Implementation:
 
 server:
-  port: 8081
+  port: ${SERVER_PORT}
+
+aws:
+  b2:
+    bucket-name: ${AWS_B2_BUCKET_NAME}
+    endpoint: ${AWS_B2_ENDPOINT}
+    region: ${AWS_B2_REGION}
+    access-key: ${AWS_B2_ACCESS_KEY}
+    secret-key: ${AWS_B2_SECRET_KEY}
+
 
 rsa:
   private-key: classpath:certs/private.pem
