--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,17 +1,14 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:8889/JetBlue?createDatabaseIfNotExist=true
-    username: root
-    password: root
+    username: ${DATABASE_NAME}
+    password: ${DATABASE_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
   servlet:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
-#  config:
-#    import:
-#        - optional:classpath:application-secrets.yaml
-#        - optional:classpath:application-${SPRING_PROFILES_ACTIVE}.yaml
+
 
   jpa:
     hibernate:
@@ -42,7 +39,7 @@ logging:
             Implementation:
 
 server:
-  port: 8081
+  port: ${LOCAL_HOST_PORT}
 
 aws:
   b2:
@@ -51,7 +48,6 @@ aws:
     region: ${AWS_B2_REGION}
     access-key: ${AWS_B2_ACCESS_KEY}
     secret-key: ${AWS_B2_SECRET_KEY}
-
 
 rsa:
   private-key: classpath:certs/private.pem
