FLG-148 Verify User Account

--- a/.env.exemple
+++ b/.env.exemple
@@ -24,12 +24,19 @@ SMTP_PASSWORD=your-app-password
 # API Keys
 STRIPE_API_KEY=your_stripe_secret_key
 STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
+
 # S3 Configuration
 AWS_B2_BUCKET_NAME=your_bucket_name
 AWS_B2_ENDPOINT=your_endpoint
 AWS_B2_REGION=your_region
 AWS_B2_ACCESS_KEY=your_access_key
 AWS_B2_SECRET_KEY=your_secret_key
+
+#Mailing configuration
+EMAIL_HOST=your_smtp_host
+EMAIL_PORT=your_smtp_port
+EMAIL_USERNAME=your_smtp_username
+EMAIL_PASSWORD=your_smtp_password
 
 # Environment
 SPRING_PROFILES_ACTIVE=dev
