--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,10 @@
             <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
@@ -162,6 +166,7 @@
             <version>2.20.144</version>
         </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
